2005-08-13  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-operation.c:
    * libseahorse/seahorse-operation.h: Rename seahorse_multi_operation_add
    to seahorse_multi_operation_take to reflect op ownership.
    * agent/seahorse-agent-status.c:
    * libseahorse/Makefile.am:
    * libseahorse/seahorse-context.c:
    * libseahorse/seahorse-context.h:
    * libseahorse/seahorse-default-key-control.c:
    * libseahorse/seahorse-default-key-control.h:
    * libseahorse/seahorse-hkp-source.c:
    * libseahorse/seahorse-hkp-source.h:
    * libseahorse/seahorse-key-source.c:
    * libseahorse/seahorse-key-source.h:
    * libseahorse/seahorse-key-store.c:
    * libseahorse/seahorse-key-store.h:
    * libseahorse/seahorse-key.c:
    * libseahorse/seahorse-key.h:
    * libseahorse/seahorse-keyset.c:
    * libseahorse/seahorse-keyset.h:
    * libseahorse/seahorse-ldap-source.c:
    * libseahorse/seahorse-ldap-source.h:
    * libseahorse/seahorse-libdialogs.h:
    * libseahorse/seahorse-marshal.list:
    * libseahorse/seahorse-op.c:
    * libseahorse/seahorse-op.h:
    * libseahorse/seahorse-passphrase.c:
    * libseahorse/seahorse-pgp-key.c:
    * libseahorse/seahorse-pgp-key.h:
    * libseahorse/seahorse-pgp-source.c:
    * libseahorse/seahorse-pgp-source.h:
    * libseahorse/seahorse-prefs-cache.c:
    * libseahorse/seahorse-prefs.c:
    * libseahorse/seahorse-prefs.h:
    * libseahorse/seahorse-progress.c:
    * libseahorse/seahorse-progress.h:
    * libseahorse/seahorse-recipients-store.c:
    * libseahorse/seahorse-recipients-store.h:
    * libseahorse/seahorse-recipients.h:
    * libseahorse/seahorse-recipients.c:
    * libseahorse/seahorse-server-source.c:
    * libseahorse/seahorse-server-source.h:
    * libseahorse/seahorse-signatures.c:
    * libseahorse/seahorse-signer.c:
    * libseahorse/seahorse-util.c:
    * libseahorse/seahorse-util.h:
    * libseahorse/seahorse-widget.c:
    * libseahorse/seahorse-widget.h: