@@ -1,5 +1,7 @@
 2005-08-13  Nate Nielsen  <nielsen@memberwebs.com>
 
+    * src/seahorse-key-manager.c:
+    * src/seahorse-keyserver-results.c: Set initial focus to tree view
     * libseahorse/seahorse-operation.c:
     * libseahorse/seahorse-operation.h: Rename seahorse_multi_operation_add
     to seahorse_multi_operation_take to reflect op ownership.
